fix gap between label and yellow sign

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -215,7 +215,6 @@ div.user-image {
   left: 50%;
   transform: translateX(-50%);
   color: var(--bg-color7);
-  margin-top: 5px;
 }
 
 /* Music Space Bottom */
